change forms to work with api calls

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
         <div class="col-md-6 offset-md-3 mt-3">
             <h2 class="text-center">Existing User?</h2>
             <h3>Login</h3>
-            <form class="w-100" id="loginForm">
+            <form id="login-form">
                 <div class="mb-3">
                     <label for="email-login" class="form-label">Email address</label>
                     <input type="email" class="form-control" id="email-login">
@@ -20,10 +20,10 @@
         <div class="col-md-6 offset-md-3 mt-3">
             <h2 class="text-center">New User?</h2>
             <h3>Signup</h3>
-            <form>
+            <form id="signup-form">
                 <div class="mb-3">
                     <label for="username-signup" class="form-label">Username</label>
-                    <input type="email" class="form-control" id="username-signup">
+                    <input type="text" class="form-control" id="username-signup">
                 </div>
                 <div class="mb-3">
                     <label for="email-signup" class="form-label">Email address</label>
