--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,17 +28,19 @@
                             <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Login</a>
+                            <a class="nav-link active" aria-current="page" href="/login">Login</a>
                         </li>
+                        {{#if session.logged_in}}
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Logout</a>
+                            <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
                         </li>
+                        {{/if}}
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <main>
+    <main>  
         {{{body}}}
     </main>
     <footer>
