--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,9 +27,11 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
                         </li>
+                        {{#unless session.logged_in}}
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="/login">Login</a>
                         </li>
+                        {{/unless}}
                         {{#if session.logged_in}}
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
