--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -10,5 +10,5 @@
     {{/each}}
 </div>
 <div>
-    <button class="btn btn-primary">Create New Post</button>
+    <a href="/posts/new" class="btn btn-primary">Create New Post</a>
 </div>
