add post date to view

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,6 +8,7 @@
                 <div class="card mb-3">
                     <div class="card-body">
                         <h5 class="card-title">{{this.title}}</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Date Posted - {{this.date_created}}</h6>
                         <p class="card-text">{{this.content}}</p>
                         <a href="/posts/edit/{{this.id}}" class="btn btn-primary">Edit</a>
                     </div>
