--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,7 +6,7 @@
                 <div class="card mb-3">
                     <div class="card-body">
                         <h5 class="card-title">{{this.title}}</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Posted by - {{this.user.name}}</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Posted by - {{this.user.name}} ({{this.date_created}})</h6>
                         <p class="card-text">{{this.content}}</p>
                         {{#if (belongsTo ../currentUser this.user.id)}}
                         <a href="/posts/edit/{{this.id}}" class="btn btn-primary">Edit</a>
