--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -1,1 +1,17 @@
-<h1>Comment!</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 mt-3">
+            <h2 class="text-center">Create New Comment</h2>
+            <form id="new-comment-form">
+                <input type="hidden" name="post-id" id="post-id" value={{post_id}}>
+                <div class="mb-3">
+                    <label for="comment-content" class="form-label">Content</label>
+                    <textarea class="form-control" id="comment-content" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary col-12">Create Comment</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+<script src="/js/newComment.js"></script>
