--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -11,6 +11,7 @@
                         {{#if (belongsTo ../currentUser this.user.id)}}
                         <a href="/posts/edit/{{this.id}}" class="btn btn-primary">Edit</a>
                         {{/if}}
+                        <a href="/posts/view/{{this.id}}" class="btn btn-success">View Post</a>
                     </div>
                 </div>
             {{/each}}
