--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -11,6 +11,8 @@
                         <h6 class="card-subtitle mb-2 text-muted">Date Posted - {{this.date_created}}</h6>
                         <p class="card-text">{{this.content}}</p>
                         <a href="/posts/edit/{{this.id}}" class="btn btn-primary">Edit</a>
+                        <a href="/posts/view/{{this.id}}" class="btn btn-success">View Post</a>
+                        <a href="/posts/delete/{{this.id}}" class="btn btn-danger">Delete Post</a>
                     </div>
                 </div>
             {{/each}}
